# hoho_talk

./: .gitignore  Makefile  README.md  pyproject.toml
examples/persona/: jack_persona.txt  kol_persona.txt
src/hoho_talk/: __init__.py  __main__.py  data.py  talk_agent.py  tools.py  utils.py
