[project]
name = "hoho-talk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.3"
dependencies = ["click>=8.1.8", "ollama>=0.4.4", "pydantic>=2.10.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
hoho-talk = { workspace = true }

[dependency-groups]
dev = [
    "black>=24.10.0",
    "hoho-talk",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
]
